--- a/package.json
+++ b/package.json
@@ -1,7 +1,5 @@
 {
   "name": "youtube-analyzer",
   "version": "1.0.0",
-  "dependencies": {
-    "youtube-transcript": "^1.2.1"
-  }
+  "type": "module"
 }
