--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "youtube-analyzer",
   "version": "1.0.0",
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "youtubei.js": "^10.5.0"
+  }
 }
